feat: Added skeleton API endpoints
