# api/src/epa_api/apis/system_api.py
@@ -4,7 +4,7 @@ from typing import Dict, List  # noqa: F401
 import importlib
 import pkgutil
 
-from epa_api.apis.default_api_base import BaseDefaultApi
+from epa_api.apis.system_api_base import BaseSystemApi
 import epa_api.api_implementation
 
 from fastapi import (  # noqa: F401
@@ -34,16 +34,16 @@ for _, name, _ in pkgutil.iter_modules(ns_pkg.__path__, ns_pkg.__name__ + "."):
 
 
 @router.get(
-    "/status",
+    "/v1/status",
     responses={
         200: {"model": Status, "description": "API is healthy"},
     },
-    tags=["default"],
+    tags=["System"],
     summary="Check API health",
     response_model_by_alias=True,
 )
-async def get_status(
+async def get_api_status(
 ) -> Status:
-    if not BaseDefaultApi.subclasses:
+    if not BaseSystemApi.subclasses:
         raise HTTPException(status_code=500, detail="Not implemented")
-    return await BaseDefaultApi.subclasses[0]().get_status()
+    return await BaseSystemApi.subclasses[0]().get_api_status()
