# api/src/epa_api/models/refresh_token_request.py
@@ -20,20 +20,19 @@ import json
 
 
 
-from pydantic import BaseModel, ConfigDict, StrictStr
-from typing import Any, ClassVar, Dict, List, Optional
+from pydantic import BaseModel, ConfigDict, Field, StrictStr
+from typing import Any, ClassVar, Dict, List
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-class Status(BaseModel):
+class RefreshTokenRequest(BaseModel):
     """
-    Status
+    RefreshTokenRequest
     """ # noqa: E501
-    status: Optional[StrictStr] = None
-    version: Optional[StrictStr] = None
-    __properties: ClassVar[List[str]] = ["status", "version"]
+    refresh_token: StrictStr = Field(alias="refreshToken")
+    __properties: ClassVar[List[str]] = ["refreshToken"]
 
     model_config = {
         "populate_by_name": True,
@@ -53,7 +52,7 @@ class Status(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of Status from a JSON string"""
+        """Create an instance of RefreshTokenRequest from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -76,7 +75,7 @@ class Status(BaseModel):
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of Status from a dict"""
+        """Create an instance of RefreshTokenRequest from a dict"""
         if obj is None:
             return None
 
@@ -84,8 +83,7 @@ class Status(BaseModel):
             return cls.model_validate(obj)
 
         _obj = cls.model_validate({
-            "status": obj.get("status"),
-            "version": obj.get("version")
+            "refreshToken": obj.get("refreshToken")
         })
         return _obj
 
