# api/src/epa_api/security_api.py
@@ -18,3 +18,19 @@ from fastapi.security.api_key import APIKeyCookie, APIKeyHeader, APIKeyQuery  # 
 
 from epa_api.models.extra_models import TokenModel
 
+
+bearer_auth = HTTPBearer()
+
+
+def get_token_BearerAuth(credentials: HTTPAuthorizationCredentials = Depends(bearer_auth)) -> TokenModel:
+    """
+    Check and retrieve authentication information from custom bearer token.
+
+    :param credentials Credentials provided by Authorization header
+    :type credentials: HTTPAuthorizationCredentials
+    :return: Decoded token information or None if token is invalid
+    :rtype: TokenModel | None
+    """
+
+    ...
+
